# gh-actions-workflows-docker-services

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  UNRELEASED-CHANGELOG.md  extract-pkg-info-latest-version.jq  pkg-info-updater.py  pkg-info.json  pkg-info.schema.json  rust-toolchain.toml  shell.nix
.github/: dependabot.yml
.github/actions/called-workflow-ref/: action.yml
.github/actions/pkg-version-to-use/: action.sh  action.yml
.github/workflows/: docker-build-publish.yml  release-artifact.yml  releaser.yml  rust.yml  test-actions-called-workflow-ref.yml  test-pkg-version-to-use.yml  update-pkg-info.yml
script/: build.dockerfile  extract-change-for-release.awk  make-release.sh
src/: lib.rs  main.rs  pkg_info.rs  reqwest_utils.rs  serde_utils.rs  version.rs
src/pkg_info/: mode.rs
src/pkg_info/mode/: bash_command.rs  external_cmd.rs  github.rs  jq_script.rs
tests/: schema.rs
tests/samples/: allow-prerelease.json  minimal-bash-command.json  minimal-github-release.json  minimal-jq-script.json  single-version-github-release.json  v-prefixed-version.json
