[package]
name = "pkg-info-updater"
version = "2.1.1"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", default-features = false, features = ["std"] }
clap = { version = "4.5.13", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "color", "humantime"] }
log = { version = "0.4.22", default-features = false }
reqwest = { version = "0.12.8", default-features = false, features = ["default-tls", "stream", "gzip"] }
serde = { version = "1.0.210", default-features = false, features = ["std", "derive"] }
url = { version = "2.5.2", default-features = false, features = ["serde"] }
serde_json = { version = "1.0.128", default-features = false, features = ["std", "preserve_order"] }
thiserror = { version = "1.0.64", default-features = false }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
itertools = { version = "0.13.0", default-features = false, features = ["use_std"] }
tokio = { version = "1.40.0", default-features = false, features = ["rt", "rt-multi-thread", "process", "io-util"] }
sha2 = { version = "0.10.8", default-features = false, features = ["std"] }
regex = { version = "1.11.0", default-features = false, features = ["std", "perf"] }
tokio-util = { version = "0.7.12", default-features = false, features = ["io"] }

[dev-dependencies]
rstest = { version = "0.23.0", default-features = false }
